--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@fc/config/tsconfig.nextjs.json",
+  "compilerOptions": {
+    "types": ["@ducanh2912/next-pwa/workbox"]
+  },
   "include": ["next-env.d.ts", "@types/**/*.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["dist", "build", "node_modules"]
 }
