--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@fc/config/tsconfig.react.json",
   "include": ["."],
+  "compilerOptions": {
+    "lib": ["dom", "webworker"]
+  },
   "exclude": ["dist", "build", "node_modules"]
 }
