Add email templates setup to api

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@hookform/resolvers": "^3.4.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@splidejs/react-splide": "^0.7.12",
-    "@tanstack/react-query": "^5.36.2",
-    "@tanstack/react-query-devtools": "^5.36.2",
+    "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-query-devtools": "^5.37.1",
     "@uppy/compressor": "^1.1.4",
     "@uppy/core": "^3.11.3",
     "@uppy/dashboard": "^3.8.3",
@@ -48,14 +48,14 @@
     "@vercel/kv": "^1.0.1",
     "@vercel/og": "^0.6.2",
     "ai": "^3.1.12",
-    "axios": "^1.7.0",
+    "axios": "^1.7.1",
     "chakra-react-select": "^4.7.6",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "file-saver": "^2.0.5",
     "framer-motion": "11.2.4",
-    "i18next": "^23.11.4",
+    "i18next": "^23.11.5",
     "iron-session": "^8.0.1",
     "jszip": "^3.10.1",
     "kill-port-process": "^3.2.1",
@@ -74,6 +74,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-email": "2.1.3",
     "react-headroom": "^3.2.1",
     "react-hook-form": "7.51.4",
     "react-hook-form-persist": "^3.0.0",
@@ -122,8 +123,8 @@
     "@types/string-similarity": "^4.0.2",
     "@types/twitter-text": "^3.1.10",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "browserify-fs": "^1.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
