--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES2015",
     "lib": ["DOM", "ES2015"],
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "jsx": "react"
   },
   "include": ["./", "./**/*.ts", "./**/*.js", "src/**/*.json"],
   "exclude": [
