--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@vercel/kv": "^1.0.1",
     "@vercel/og": "^0.6.2",
     "ai": "^3.1.12",
-    "axios": "^1.7.1",
+    "axios": "^1.7.2",
     "chakra-react-select": "^4.7.6",
-    "cookies-next": "^4.1.1",
+    "cookies-next": "^4.2.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "file-saver": "^2.0.5",
@@ -111,6 +111,7 @@
     "@storybook/nextjs": "^7.6.19",
     "@storybook/react": "^7.6.19",
     "@storybook/types": "^7.6.19",
+    "@testing-library/react": "^14.3.1",
     "@turbo/gen": "^1.13.3",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
