feature flag added for notification feature

--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,7 @@
     "STRIPE_KEY",
     "OPENAI_API_KEY",
     "NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY",
+    "NEXT_PUBLIC_ENABLE_NOTIFICATIONS",
     "WEB_PUSH_EMAIL",
     "WEB_PUSH_PRIVATE_KEY",
     "EDGE_CONFIG"
