--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@builder.io/react-hydration-overlay": "^0.0.8",
+    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@ctrl/tinycolor": "^4.1.0",
     "@ducanh2912/next-pwa": "^10.2.7",
@@ -46,16 +47,16 @@
     "@uppy/url": "^3.6.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.1.1",
-    "@vercel/kv": "^1.0.1",
+    "@vercel/kv": "^2.0.0",
     "@vercel/og": "^0.6.2",
-    "ai": "^3.1.18",
+    "ai": "^3.1.22",
     "axios": "^1.7.2",
     "chakra-react-select": "^4.7.6",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "file-saver": "^2.0.5",
-    "framer-motion": "11.2.9",
+    "framer-motion": "11.2.10",
     "i18next": "^23.11.5",
     "iron-session": "^8.0.1",
     "jszip": "^3.10.1",
@@ -69,7 +70,7 @@
     "next-recaptcha-v3": "^1.4.1",
     "next-seo": "^6.5.0",
     "next-share": "^0.27.0",
-    "openai": "^4.47.2",
+    "openai": "^4.47.3",
     "pluralize": "^8.0.0",
     "qs": "^6.12.1",
     "react": "^18.3.1",
@@ -88,7 +89,7 @@
     "react-medium-image-zoom": "^5.2.4",
     "react-pageflip": "^2.0.3",
     "react-player": "^2.16.0",
-    "react-qr-code": "^2.0.13",
+    "react-qr-code": "^2.0.14",
     "react-use": "^17.5.0",
     "recharts": "^2.12.7",
     "remove-markdown": "^0.5.0",
@@ -117,7 +118,7 @@
     "@turbo/gen": "^1.13.3",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.13.0",
     "@types/pluralize": "^0.0.33",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -140,7 +141,7 @@
     "i18next-http-backend": "^2.5.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "storybook": "^7.6.19",
     "stream-browserify": "^3.0.0",
     "turbo": "^1.13.3",
