--- a/turbo.json
+++ b/turbo.json
@@ -1,32 +1,36 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalEnv": [
+    "API_TOKEN",
+    "CI",
+    "DEEPL_API_KEY",
+    "EDGE_CONFIG",
     "NEXT_PUBLIC_API_URL",
     "NEXT_PUBLIC_DONATION_REQUEST_LINK",
     "NEXT_PUBLIC_EMAIL_RECEIVER",
     "NEXT_PUBLIC_EMAIL_SENDER",
+    "NEXT_PUBLIC_ENABLE_NOTIFICATIONS",
     "NEXT_PUBLIC_GA_MEASUREMENT_ID",
     "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
+    "NEXT_PUBLIC_SENTRY_DSN",
     "NEXT_PUBLIC_SITE_URL",
     "NEXT_PUBLIC_TOKEN",
     "NEXT_PUBLIC_TWITTER_HANDLE",
+    "NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY",
+    "NEXT_RUNTIME",
     "NODE_ENV",
-    "USERNAME",
-    "VERCEL_ENV",
-    "VERCEL_URL",
-    "CI",
-    "API_TOKEN",
-    "DEEPL_API_KEY",
+    "OPENAI_API_KEY",
     "PASSWORD",
     "RECAPTCHA_SECRET_KEY",
     "SECRET_COOKIE_PASSWORD",
+    "SENTRY_ORG",
+    "SENTRY_PROJECT",
     "STRIPE_KEY",
-    "OPENAI_API_KEY",
-    "NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY",
-    "NEXT_PUBLIC_ENABLE_NOTIFICATIONS",
+    "USERNAME",
+    "VERCEL_ENV",
+    "VERCEL_URL",
     "WEB_PUSH_EMAIL",
-    "WEB_PUSH_PRIVATE_KEY",
-    "EDGE_CONFIG"
+    "WEB_PUSH_PRIVATE_KEY"
   ],
   "pipeline": {
     "build:dev": {
