--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ tsconfig.tsbuildinfo
 **/public/workbox-*.js
 **/public/sw.js
 **/public/worker-*.js
+
+# Sentry Config File
+.env.sentry-build-plugin
