--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fc/types": "*",
     "@fc/ui": "*",
     "@hookform/resolvers": "^3.4.2",
+    "@sentry/nextjs": "^8.7.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-query": "^5.40.0",
@@ -118,7 +119,7 @@
     "@turbo/gen": "^1.13.3",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.13.0",
+    "@types/node": "^20.14.0",
     "@types/pluralize": "^0.0.33",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
