--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "kill-ports": "kill-port 3000 3001 3002 3003 3004 1337",
     "test": "yarn kill-ports && playwright test",
     "tsc": "turbo run tsc --concurrency=20",
-    "copy-locales": "cp -R apps/dashboard/public/locales/* apps/kunsthalte/public/locales && cp -R apps/dashboard/public/locales/* apps/foundation/public/locales && cp -R apps/dashboard/public/locales/* apps/trend-rights/public/locales && cp -R apps/dashboard/public/locales/* apps/lotus/public/locales  && cp -R apps/dashboard/public/locales/* packages/ui/public/locales"
+    "copy-locales": "cp -R packages/ui/public/locales/* apps/kunsthalte/public/locales && cp -R packages/ui/public/locales/* apps/foundation/public/locales && cp -R packages/ui/public/locales/* apps/trend-rights/public/locales && cp -R packages/ui/public/locales/* apps/lotus/public/locales  && cp -R packages/ui/public/locales/* apps/dashboard/public/locales",
+    "add-word": "apps/api/scripts/addi18.sh"
   },
   "dependencies": {
     "@builder.io/react-hydration-overlay": "^0.0.8",
@@ -39,10 +40,11 @@
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-devtools": "^5.40.0",
     "@uppy/compressor": "^1.1.4",
-    "@uppy/core": "^3.11.3",
+    "@uppy/core": "^3.12.0",
     "@uppy/dashboard": "^3.8.3",
     "@uppy/drag-drop": "^3.1.0",
     "@uppy/file-input": "^3.1.2",
+    "@uppy/image-editor": "^2.4.6",
     "@uppy/progress-bar": "^3.1.1",
     "@uppy/react": "^3.3.1",
     "@uppy/url": "^3.6.1",
@@ -66,7 +68,7 @@
     "lorem-ipsum": "^2.0.8",
     "nanoid": "^5.0.7",
     "next": "^14.2.3",
-    "next-i18next": "^15.3.0",
+    "next-i18next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
     "next-recaptcha-v3": "^1.4.1",
     "next-seo": "^6.5.0",
