--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-player": "^2.16.0",
     "react-qr-code": "^2.0.14",
     "react-use": "^17.5.0",
+    "react-virtuoso": "^4.7.11",
     "recharts": "^2.12.7",
     "remove-markdown": "^0.5.0",
     "string-similarity": "^4.0.4",
