--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,8 +23,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm install ci
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
       - run: npx playwright install --with-deps
       - name: Run tests
         env:
