--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "types": "./index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts*\"",
+    "lint": "rm -rf tsconfig.tsbuildinfo && eslint \"**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules",
     "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build",
