--- a/apps/kunsthalte/package.json
+++ b/apps/kunsthalte/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "dotenv -e ../../.env.local next dev -- -p 3002",
+    "dev:test": "dotenv -e ../../.env.test next dev -- -p 3002",
     "kunsthalte": "dotenv -e ../../.env.local next dev -- -p 3002",
     "build": "next build",
     "build:dev": "next build",
