--- a/apps/lotus/package.json
+++ b/apps/lotus/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "dotenv -e ../../.env.local next dev -- -p 3003",
+    "dev:test": "dotenv -e ../../.env.test next dev -- -p 3003",
     "lotus": "dotenv -e ../../.env.local next dev -- -p 3003",
     "build": "next build",
     "build:dev": "next build",
