--- a/apps/trend-rights/package.json
+++ b/apps/trend-rights/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "dotenv -e ../../.env.local next dev -- -p 3004",
+    "dev:test": "dotenv -e ../../.env.test next dev -- -p 3004",
     "trend-rights": "dotenv -e ../../.env.local next dev -- -p 3004",
     "build": "next build",
     "build:dev": "next build",
