--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo run build --filter=!api",
     "build:dev": "turbo run build:dev",
     "dev": "dotenv -- turbo run dev --concurrency=20",
+    "dev:test": "yarn kill-ports && dotenv -- turbo run dev:test --concurrency=20",
     "dashboard": "turbo run dashboard --concurrency=20",
     "foundation": "turbo run foundation --concurrency=20",
     "kunsthalte": "turbo run kunsthalte --concurrency=20",
