--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
     "CI",
     "DEEPL_API_KEY",
     "EDGE_CONFIG",
+    "METICULOUS_PROJECT_ID",
     "NEXT_PUBLIC_API_URL",
     "NEXT_PUBLIC_DONATION_REQUEST_LINK",
     "NEXT_PUBLIC_EMAIL_RECEIVER",
