--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,7 +43,8 @@
     "sharp": "^0.33.4",
     "strapi-plugin-import-export-entries": "^1.23.1",
     "strapi-plugin-transformer": "^3.1.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "web-push": "^3.6.7"
   },
   "author": {
     "name": "A Strapi developer"
