--- a/turbo.json
+++ b/turbo.json
@@ -8,8 +8,7 @@
     "METICULOUS_PROJECT_ID",
     "NEXT_PUBLIC_API_URL",
     "NEXT_PUBLIC_DONATION_REQUEST_LINK",
-    "NEXT_PUBLIC_EMAIL_RECEIVER",
-    "NEXT_PUBLIC_EMAIL_SENDER",
+    "NEXT_PUBLIC_EMAIL",
     "NEXT_PUBLIC_ENABLE_NOTIFICATIONS",
     "NEXT_PUBLIC_GA_MEASUREMENT_ID",
     "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
@@ -29,9 +28,7 @@
     "STRIPE_KEY",
     "USERNAME",
     "VERCEL_ENV",
-    "VERCEL_URL",
-    "WEB_PUSH_EMAIL",
-    "WEB_PUSH_PRIVATE_KEY"
+    "VERCEL_URL"
   ],
   "tasks": {
     "build:dev": {
