--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "trend-rights": "turbo run trend-rights --concurrency=20",
     "db": "turbo run db --concurrency=20",
     "lint": "turbo run lint",
-    "clean": "turbo run clean && rm -rf node_modules",
+    "clean": "turbo run clean && rm -rf node_modules .next .turbo",
     "storybook": "turbo run storybook --concurrency=20",
     "storybook-build": "turbo run storybook-build",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
@@ -24,7 +24,6 @@
     "add-word": "apps/api/scripts/add-i18.sh"
   },
   "dependencies": {
-    "@builder.io/react-hydration-overlay": "^0.0.8",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@ctrl/tinycolor": "^4.1.0",
