Update pwa configs

--- a/apps/dashboard/public/manifest.json
+++ b/apps/dashboard/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Freedom Combination Dashboard",
-  "short_name": "FC-Dashboard",
+  "short_name": "FC Dashboard",
   "start_url": "/",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
