--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "stream-browserify": "^3.0.0",
     "turbo": "^2.0.4",
     "type-fest": "^4.20.1",
-    "typescript": "^5.5.2",
+    "typescript": "5.4.5",
     "webpack": "^5.92.1"
   },
   "packageManager": "yarn@4.3.0",
