--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "lodash": "^4.17.21",
     "lorem-ipsum": "^2.0.8",
     "nanoid": "^5.0.7",
-    "next": "^14.2.4",
+    "next": "15.0.0-canary.42",
     "next-i18next": "^15.3.0",
     "next-mdx-remote": "^5.0.0",
     "next-recaptcha-v3": "^1.4.1",
@@ -136,7 +136,7 @@
     "browserify-fs": "^1.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "15.0.0-canary.42",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.0.4",
     "eslint-plugin-react": "7.34.3",
