Add react  compiler

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@fc/types": "*",
     "@fc/ui": "*",
     "@hookform/resolvers": "^3.6.0",
-    "@sentry/nextjs": "^8.10.0",
+    "@sentry/nextjs": "^8.11.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-query": "^5.45.1",
@@ -52,8 +52,9 @@
     "@vercel/edge-config": "^1.2.0",
     "@vercel/kv": "^2.0.0",
     "@vercel/og": "^0.6.2",
-    "ai": "^3.2.1",
+    "ai": "^3.2.8",
     "axios": "^1.7.2",
+    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "chakra-react-select": "^4.8.0",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
@@ -67,7 +68,7 @@
     "lodash": "^4.17.21",
     "lorem-ipsum": "^2.0.8",
     "nanoid": "^5.0.7",
-    "next": "15.0.0-canary.42",
+    "next": "^15.0.0-rc.0",
     "next-i18next": "^15.3.0",
     "next-mdx-remote": "^5.0.0",
     "next-recaptcha-v3": "^1.4.1",
@@ -76,8 +77,8 @@
     "openai": "^4.52.0",
     "pluralize": "^8.0.0",
     "qs": "^6.12.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-c21bcd627b-20240624",
+    "react-dom": "19.0.0-rc-c21bcd627b-20240624",
     "react-dropzone": "^14.2.3",
     "react-email": "2.1.4",
     "react-headroom": "^3.2.1",
@@ -131,12 +132,12 @@
     "@types/string-similarity": "^4.0.2",
     "@types/twitter-text": "^3.1.10",
     "@types/web-push": "^3.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "browserify-fs": "^1.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.0-canary.42",
+    "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.0.4",
     "eslint-plugin-react": "7.34.3",
