--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,20 +37,28 @@
     "cheerio": "^1.0.0-rc.12",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom18": "npm:react-dom@^18.3.1",
     "react-router-dom": "^5.3.4",
+    "react18": "npm:react@^18.3.1",
     "sharp": "^0.33.4",
     "strapi-plugin-import-export-entries": "^1.23.1",
     "strapi-plugin-transformer": "^3.1.2",
     "styled-components": "^5.2.1",
     "web-push": "^3.6.7"
   },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
+  },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
     "uuid": "dc6c040c-fd40-4612-8858-c117ed320ff6"
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
