--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "framer-motion": "11.2.11",
     "i18next": "^23.11.5",
     "iron-session": "^8.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
     "kill-port-process": "^3.2.1",
     "lodash": "^4.17.21",
