--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@vercel/og": "^0.6.2",
     "ai": "^3.2.15",
     "axios": "^1.7.2",
-    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
-    "chakra-react-select": "^4.8.0",
+    "babel-plugin-react-compiler": "0.0.0-experimental-696af53-20240625",
+    "chakra-react-select": "4.8.0",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
@@ -79,8 +79,8 @@
     "openai": "^4.52.2",
     "pluralize": "^8.0.0",
     "qs": "^6.12.1",
-    "react": "19.0.0-rc-c21bcd627b-20240624",
-    "react-dom": "19.0.0-rc-c21bcd627b-20240624",
+    "react": "19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "19.0.0-rc-58af67a8f8-20240628",
     "react-dropzone": "^14.2.3",
     "react-email": "2.1.4",
     "react-headroom": "^3.2.1",
