Update test env variables

--- a/turbo.json
+++ b/turbo.json
@@ -20,13 +20,13 @@
     "NEXT_RUNTIME",
     "NODE_ENV",
     "OPENAI_API_KEY",
-    "PASSWORD",
     "RECAPTCHA_SECRET_KEY",
     "SECRET_COOKIE_PASSWORD",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
     "STRIPE_KEY",
-    "USERNAME",
+    "TEST_PASSWORD",
+    "TEST_USERNAME",
     "VERCEL_ENV",
     "VERCEL_URL"
   ],
