--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 CI=true
-USERNAME=authenticated@freedomcombination.com
-PASSWORD=Test?123
+TEST_USERNAME=authenticated@freedomcombination.com
+TEST_PASSWORD=Test?123
 NEXT_PUBLIC_API_URL=https://wsvv-api-staging.onrender.com
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcBrGQoAAAAAMw91gV-VTBzyMRwyme5ygtM-H6P
 EDGE_CONFIG="https://edge-config.vercel.com/ecfg_teewtrjl8mpox0ulyt68bd43hgbi?token=token_test&teamId=team_test"
