--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,8 +28,8 @@ jobs:
       - run: npx playwright install --with-deps
       - name: Run tests
         env:
-          USERNAME: ${{ vars.USERNAME }}
-          PASSWORD: ${{ vars.PASSWORD }}
+          TEST_USERNAME: ${{ vars.USERNAME }}
+          TEST_PASSWORD: ${{ vars.PASSWORD }}
         run: npx playwright test
       - uses: actions/upload-artifact@v4
         if: always()
