uploaded image  in the pending arts

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.1.0",
+    "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.45.0",
     "@storybook/addon-essentials": "^7.6.20",
     "@storybook/builder-webpack5": "^7.6.20",
