Add email package

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "dotenv -- turbo run dev --concurrency=20",
     "dev:test": "yarn kill-ports && dotenv -- turbo run dev:test --concurrency=20",
     "dashboard": "turbo run dashboard --concurrency=20",
+    "email": "cd packages/email && yarn email",
     "foundation": "turbo run foundation --concurrency=20",
     "kunsthalte": "turbo run kunsthalte --concurrency=20",
     "lotus": "turbo run lotus --concurrency=20",
@@ -34,6 +35,10 @@
     "@fc/types": "*",
     "@fc/ui": "*",
     "@hookform/resolvers": "^3.7.0",
+    "@react-email/components": "0.0.21",
+    "@react-email/font": "0.0.6",
+    "@react-email/render": "0.0.16",
+    "@react-email/tailwind": "0.0.18",
     "@sentry/nextjs": "^8.14.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@splidejs/react-splide": "^0.7.12",
@@ -81,6 +86,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-email": "2.1.5",
     "react-headroom": "^3.2.1",
     "react-hook-form": "7.52.1",
     "react-hook-form-persist": "^3.0.0",
