--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "lodash": "^4.17.21",
     "lorem-ipsum": "^2.0.8",
     "nanoid": "^5.0.7",
-    "next": "^15.0.0-rc.0",
+    "next": "15.0.0-canary.60",
     "next-i18next": "^15.3.0",
     "next-mdx-remote": "^5.0.0",
     "next-recaptcha-v3": "^1.4.1",
@@ -79,8 +79,8 @@
     "openai": "^4.52.3",
     "pluralize": "^8.0.0",
     "qs": "^6.12.2",
-    "react": "19.0.0-rc-3da26163a3-20240704",
-    "react-dom": "19.0.0-rc-3da26163a3-20240704",
+    "react": "19.0.0-rc-c3cdbec0a7-20240708",
+    "react-dom": "19.0.0-rc-c3cdbec0a7-20240708",
     "react-dropzone": "^14.2.3",
     "react-headroom": "^3.2.1",
     "react-hook-form": "7.52.1",
