--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      - run: yarn install --immutable
+      - run: bun install --immutable
       - run: npx playwright install --with-deps
       - name: Run tests
         env:
