--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e ../../.env.local next dev -- -p 3000",
+    "dev": "dotenv -e ../../.env.local bun run next dev -- -p 3000",
     "dev:test": "dotenv -e ../../.env.test next dev -- -p 3000",
-    "dashboard": "dotenv -e ../../.env.local next dev -- -p 3000",
+    "dashboard": "dotenv -e ../../.env.local bun run next dev -- -p 3000",
     "build": "next build",
     "build:dev": "next build",
     "start": "next start",
