Adjust bun scripts

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,14 +4,14 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "email": "npx email dev",
+    "email": "bunx email dev",
     "dev": "bun run strapi dev",
     "dashboard": "bun run strapi dev",
     "foundation": "bun run strapi dev",
     "kunsthalte": "bun run strapi dev",
     "transfer": "bun run strapi transfer --from https://api.freedomcombination.com/admin",
     "trend-rights": "bun run strapi dev",
-    "lint": "eslint .",
+    "lint": "bun run --bun eslint .",
     "start": "bun run strapi start",
     "build": "bun run strapi build",
     "build:dev": "bun run strapi build",
