--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           bun-version: latest
       - run: bun install --immutable
-      - run: npx playwright install --with-deps
+      - run: bunx playwright install --with-deps
       - name: Run tests
         env:
           TEST_USERNAME: ${{ vars.USERNAME }}
           TEST_PASSWORD: ${{ vars.PASSWORD }}
-        run: npx playwright test
+        run: bunx playwright test
       - uses: actions/upload-artifact@v4
         if: always()
         with:
