--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "turbo run clean && rm -rf node_modules .next .turbo",
     "storybook": "turbo run storybook --concurrency=20",
     "storybook-build": "turbo run storybook-build",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "format": "bun run --bun prettier --write \"**/*.{ts,tsx,md,json}\"",
     "kill-ports": "kill-port 3000 3001 3002 3003 3004 1337",
     "test": "bun kill-ports && bun run playwright test",
     "tsc": "turbo run tsc --concurrency=20",
