--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -5,7 +5,7 @@
   "types": "./index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts*\"",
+    "lint": "bun run --bun eslint \"**/*.ts*\"",
     "clean": "rm -rf .turbo node_modules",
     "tsc": "npx tsc --noEmit"
   }
