Use env for admin credentials

--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,7 @@
     "SENTRY_ORG",
     "SENTRY_PROJECT",
     "STRIPE_KEY",
+    "TEST_ADMIN_USERNAME",
     "TEST_PASSWORD",
     "TEST_USERNAME",
     "VERCEL_ENV",
