--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "@vercel/edge-config": "^1.2.1",
     "@vercel/kv": "^2.0.0",
     "@vercel/og": "^0.6.2",
-    "ai": "^3.2.33",
+    "ai": "^3.2.34",
     "axios": "^1.7.2",
     "chakra-react-select": "4.9.1",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "file-saver": "^2.0.5",
-    "framer-motion": "11.3.8",
+    "framer-motion": "^11.3.12",
     "i18next": "^23.12.2",
     "iron-session": "^8.0.2",
     "jspdf": "^2.5.1",
@@ -99,7 +99,7 @@
     "recharts": "^2.12.7",
     "remove-markdown": "^0.5.0",
     "string-similarity": "^4.0.4",
-    "stripe": "^16.2.0",
+    "stripe": "^16.4.0",
     "tesseract.js": "^5.1.0",
     "twitter-api-v2": "^1.17.2",
     "twitter-text": "^3.1.0",
@@ -123,7 +123,7 @@
     "@turbo/gen": "^2.0.9",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.12",
     "@types/pluralize": "^0.0.33",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
