--- a/apps/lotus/package.json
+++ b/apps/lotus/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "dev:next": "dotenv -e ../../.env.local next dev -- -p 3003",
-    "dev": "bun --bun dev:next",
+    "dev": "yarn dev:next",
     "dev:test": "dotenv -e ../../.env.test next dev -- -p 3003",
-    "lotus": "bun run dev",
+    "lotus": "yarn dev",
     "build:next": "next build",
-    "build": "bun --bun run build:next",
-    "build:dev": "bun --bun next build",
+    "build": "yarn build:next",
+    "build:dev": "next build",
     "start:next": "next start",
-    "start": "bun --bun run start:next",
+    "start": "yarn start:next",
     "clean": "rm -rf node_modules .turbo .next",
-    "lint": "bun --bun next lint",
+    "lint": "next lint",
     "tsc": "npx tsc --noEmit"
   }
 }
