--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "turbo run build --filter=!api",
     "build:dev": "turbo run build:dev",
     "dev": "dotenv -- turbo run dev --concurrency=20",
-    "dev:test": "bun kill-ports && dotenv -- turbo run dev:test --concurrency=20",
+    "dev:test": "yarn kill-ports && dotenv -- turbo run dev:test --concurrency=20",
     "dashboard": "turbo run dashboard --concurrency=20",
     "foundation": "turbo run foundation --concurrency=20",
     "kunsthalte": "turbo run kunsthalte --concurrency=20",
@@ -16,9 +16,9 @@
     "clean": "turbo run clean && rm -rf node_modules .next .turbo",
     "storybook": "turbo run storybook --concurrency=20",
     "storybook-build": "turbo run storybook-build",
-    "format": "bun run --bun prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "kill-ports": "kill-port 3000 3001 3002 3003 3004 1337",
-    "test": "bun kill-ports && bun run playwright test",
+    "test": "yarn kill-ports && playwright test",
     "tsc": "turbo run tsc --concurrency=20",
     "copy-locales": "cp -R packages/ui/public/locales/* apps/kunsthalte/public/locales && cp -R packages/ui/public/locales/* apps/foundation/public/locales && cp -R packages/ui/public/locales/* apps/trend-rights/public/locales && cp -R packages/ui/public/locales/* apps/lotus/public/locales  && cp -R packages/ui/public/locales/* apps/dashboard/public/locales",
     "add-word": "apps/api/scripts/add-i18.sh"
@@ -70,7 +70,7 @@
     "lodash": "^4.17.21",
     "lorem-ipsum": "^2.0.8",
     "nanoid": "^5.0.7",
-    "next": "15.0.0-canary.73",
+    "next": "15.0.0-canary.79",
     "next-i18next": "^15.3.0",
     "next-mdx-remote": "^5.0.0",
     "next-recaptcha-v3": "^1.4.1",
@@ -79,8 +79,8 @@
     "openai": "^4.53.0",
     "pluralize": "^8.0.0",
     "qs": "^6.12.3",
-    "react": "^19.0.0-rc-512b09b2-20240718",
-    "react-dom": "^19.0.0-rc-512b09b2-20240718",
+    "react": "19.0.0-rc-f6cce072-20240723",
+    "react-dom": "19.0.0-rc-f6cce072-20240723",
     "react-dropzone": "^14.2.3",
     "react-headroom": "^3.2.1",
     "react-hook-form": "7.52.1",
@@ -138,7 +138,7 @@
     "browserify-fs": "^1.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.0-canary.73",
+    "eslint-config-next": "15.0.0-canary.79",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.0.9",
     "eslint-plugin-react": "7.35.0",
@@ -154,7 +154,7 @@
     "typescript": "5.4.5",
     "webpack": "^5.93.0"
   },
-  "packageManager": "bun@1.1.20",
+  "packageManager": "yarn@4.3.1",
   "workspaces": [
     "apps/*",
     "packages/*"
