--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@sentry/nextjs": "^8.22.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@splidejs/react-splide": "^0.7.12",
-    "@tanstack/react-query": "^5.51.18",
-    "@tanstack/react-query-devtools": "^5.51.18",
+    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "@uppy/compressor": "^2.0.1",
     "@uppy/core": "^4.1.0",
     "@uppy/dashboard": "^4.0.2",
@@ -49,7 +49,7 @@
     "@vercel/edge-config": "^1.2.1",
     "@vercel/kv": "^2.0.0",
     "@vercel/og": "^0.6.2",
-    "ai": "^3.2.45",
+    "ai": "^3.3.0",
     "axios": "^1.7.3",
     "chakra-react-select": "4.9.1",
     "cookies-next": "^4.2.1",
@@ -72,14 +72,14 @@
     "next-recaptcha-v3": "^1.4.1",
     "next-seo": "^6.5.0",
     "next-share": "^0.27.0",
-    "openai": "^4.53.2",
+    "openai": "^4.54.0",
     "pluralize": "^8.0.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-headroom": "^3.2.1",
-    "react-hook-form": "7.52.1",
+    "react-hook-form": "7.52.2",
     "react-hook-form-persist": "^3.0.0",
     "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
@@ -94,7 +94,7 @@
     "react-use": "^17.5.1",
     "react-virtuoso": "^4.9.0",
     "recharts": "^2.12.7",
-    "remove-markdown": "^0.5.0",
+    "remove-markdown": "^0.5.2",
     "string-similarity": "^4.0.4",
     "stripe": "^16.6.0",
     "tesseract.js": "^5.1.0",
@@ -129,8 +129,8 @@
     "@types/string-similarity": "^4.0.2",
     "@types/twitter-text": "^3.1.10",
     "@types/web-push": "^3.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "browserify-fs": "^1.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
