--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 CI=true
-TEST_USERNAME=authenticated@freedomcombination.com
+TEST_USERNAME=authenticated
+ADMIN_USERNAME=admin
 TEST_PASSWORD=Test?123
 NEXT_PUBLIC_API_URL=https://wsvv-api-staging.onrender.com
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcBrGQoAAAAAMw91gV-VTBzyMRwyme5ygtM-H6P
