--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,6 +29,7 @@ jobs:
       - run: npx playwright install --with-deps
       - name: Run tests
         env:
+          ADMIN_USERNAME: ${{ vars.ADMIN_USERNAME }}
           TEST_USERNAME: ${{ vars.USERNAME }}
           TEST_PASSWORD: ${{ vars.PASSWORD }}
         run: npx playwright test
