--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,13 +28,13 @@
     "@react-email/font": "0.0.7",
     "@react-email/render": "0.0.17",
     "@react-email/tailwind": "0.0.19",
-    "@strapi/plugin-i18n": "^4.25.7",
-    "@strapi/plugin-sentry": "^4.25.7",
-    "@strapi/plugin-users-permissions": "^4.25.7",
-    "@strapi/provider-email-nodemailer": "^4.25.7",
-    "@strapi/strapi": "^4.25.7",
+    "@strapi/plugin-i18n": "^4.25.8",
+    "@strapi/plugin-sentry": "^4.25.8",
+    "@strapi/plugin-users-permissions": "^4.25.8",
+    "@strapi/provider-email-nodemailer": "^4.25.8",
+    "@strapi/strapi": "^4.25.8",
     "apify-client": "^2.9.4",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
     "react": "^18.3.1",
