--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "3.0.0-next.15",
     "@ctrl/tinycolor": "^4.1.0",
     "@ducanh2912/next-pwa": "^10.2.8",
     "@emotion/react": "^11.13.0",
@@ -56,7 +56,6 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.3.28",
     "i18next": "^23.13.0",
     "iron-session": "^8.0.2",
     "jspdf": "^2.5.1",
@@ -72,6 +71,7 @@
     "next-recaptcha-v3": "^1.4.1",
     "next-seo": "^6.5.0",
     "next-share": "^0.27.0",
+    "next-themes": "^0.3.0",
     "openai": "4.29.1",
     "pluralize": "^8.0.0",
     "qs": "^6.13.0",
