--- a/packages/config/tsconfig.nextjs.json
+++ b/packages/config/tsconfig.nextjs.json
@@ -3,17 +3,19 @@
   "display": "Next.js",
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "plugins": [{ "name": "next" }],
     "allowJs": true,
     "declaration": false,
     "declarationMap": false,
     "incremental": true,
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "noEmit": true,
+    "plugins": [{ "name": "next" }],
     "resolveJsonModule": true,
-    "target": "es5"
+    "skipLibCheck": true,
+    "target": "es5",
   },
   "include": [
     "next-env.d.ts",
