--- a/packages/config/tsconfig.react.json
+++ b/packages/config/tsconfig.react.json
@@ -6,6 +6,8 @@
     "jsx": "react-jsx",
     "lib": ["ES2015", "DOM"],
     "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
     "target": "es6"
   }
 }
