feat: add InstagramTimeline component with secure API token handling

--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
     "CI",
     "DEEPL_API_KEY",
     "EDGE_CONFIG",
+    "INSTAGRAM_ACCESS_TOKEN",
     "METICULOUS_PROJECT_ID",
     "NEXT_PUBLIC_API_URL",
     "NEXT_PUBLIC_DONATION_REQUEST_LINK",
