--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@react-email/components": "0.0.25",
     "@react-email/font": "0.0.8",
     "@react-email/render": "1.0.1",
+    "@strapi/plugin-documentation": "^4.25.10",
     "@strapi/plugin-i18n": "^4.25.10",
     "@strapi/plugin-sentry": "^4.25.10",
     "@strapi/plugin-users-permissions": "^4.25.10",
