--- a/turbo.json
+++ b/turbo.json
@@ -28,7 +28,7 @@
     "SENTRY_PROJECT",
     "STRIPE_KEY",
     "TEST_PASSWORD",
-    "TEST_TOKEN",
+    "TEST_API_TOKEN",
     "TEST_USERNAME",
     "VERCEL_ENV",
     "VERCEL_URL"
