--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,50 @@ tsconfig.tsbuildinfo
 
 .env
 i18nHelper.config.json
+apps/api/src/api/account-statistic/documentation/1.0.0/account-statistic.json
+apps/api/src/api/activity/documentation/1.0.0/activity.json
+apps/api/src/api/applicant/documentation/1.0.0/applicant.json
+apps/api/src/api/application/documentation/1.0.0/application.json
+apps/api/src/api/archive-content/documentation/1.0.0/archive-content.json
+apps/api/src/api/archive-image/documentation/1.0.0/archive-image.json
+apps/api/src/api/art/documentation/1.0.0/art.json
+apps/api/src/api/asset/documentation/1.0.0/asset.json
+apps/api/src/api/assets-tracking/documentation/1.0.0/assets-tracking.json
+apps/api/src/api/audit-log/documentation/1.0.0/audit-log.json
+apps/api/src/api/blog/documentation/1.0.0/blog.json
+apps/api/src/api/category/documentation/1.0.0/category.json
+apps/api/src/api/collection/documentation/1.0.0/collection.json
+apps/api/src/api/comment/documentation/1.0.0/comment.json
+apps/api/src/api/competition/documentation/1.0.0/competition.json
+apps/api/src/api/course/content-types/course/schema.json
+apps/api/src/api/course/documentation/1.0.0/course.json
+apps/api/src/api/course-application/content-types/course-application/schema.json
+apps/api/src/api/course-application/documentation/1.0.0/course-application.json
+apps/api/src/api/donate/documentation/1.0.0/donate.json
+apps/api/src/api/feedback/documentation/1.0.0/feedback.json
+apps/api/src/api/foundation/documentation/1.0.0/foundation.json
+apps/api/src/api/hashtag/documentation/1.0.0/hashtag.json
+apps/api/src/api/job/documentation/1.0.0/job.json
+apps/api/src/api/mention/documentation/1.0.0/mention.json
+apps/api/src/api/notification/documentation/1.0.0/notification.json
+apps/api/src/api/observation/documentation/1.0.0/observation.json
+apps/api/src/api/payment/documentation/1.0.0/payment.json
+apps/api/src/api/platform/content-types/platform/schema.json
+apps/api/src/api/platform/documentation/1.0.0/platform.json
+apps/api/src/api/post/documentation/1.0.0/post.json
+apps/api/src/api/presentation/documentation/1.0.0/presentation.json
+apps/api/src/api/privacy/documentation/1.0.0/privacy.json
+apps/api/src/api/profile/documentation/1.0.0/profile.json
+apps/api/src/api/recommended-topic/documentation/1.0.0/recommended-topic.json
+apps/api/src/api/recommended-tweet/documentation/1.0.0/recommended-tweet.json
+apps/api/src/api/subscriber/documentation/1.0.0/subscriber.json
+apps/api/src/api/tag/documentation/1.0.0/tag.json
+apps/api/src/api/term/documentation/1.0.0/term.json
+apps/api/src/api/timeline/documentation/1.0.0/timeline.json
+apps/api/src/api/topic/documentation/1.0.0/topic.json
+apps/api/src/api/translate/documentation/1.0.0/translate.json
+apps/api/src/api/trend/documentation/1.0.0/trend.json
+apps/api/src/api/user-feedback/documentation/1.0.0/user-feedback.json
+apps/api/src/api/user-notification/documentation/1.0.0/user-notification.json
+apps/api/src/api/vote/documentation/1.0.0/vote.json
+apps/api/src/extensions/documentation/documentation/1.0.0/full_documentation.json
