--- a/i18nHelper.config.json
+++ b/i18nHelper.config.json
@@ -8,5 +8,5 @@
     "apps/lotus/public/locales/"
   ],
   "sortItemByName": true,
-  "deepL_ApiKey": ""
+  "deepL_ApiKey": "231f2ee9-abed-4758-b171-558b637f04a2:fx"
 }
