--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
     "CI",
     "DEEPL_API_KEY",
     "EDGE_CONFIG",
+    "GEOLOCATION_API_KEY",
     "INSTAGRAM_ACCESS_TOKEN",
     "METICULOUS_PROJECT_ID",
     "NEXT_PUBLIC_API_URL",
