--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-masonry-css": "^1.0.16",
     "react-medium-image-zoom": "^5.2.10",
     "react-pageflip": "^2.0.3",
+    "react-phone-number-input": "^3.4.8",
     "react-player": "^2.16.0",
     "react-qr-code": "^2.0.15",
     "react-use": "^17.5.1",
@@ -105,6 +106,8 @@
     "web-push": "^3.6.7",
     "yup": "^1.4.0",
     "yup-locales": "^1.2.28",
+    "yup-phone": "^1.3.2",
+    "yup-phone-lite": "^2.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
