--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sentry/nextjs": "^8.31.0",
     "@sindresorhus/slugify": "1.1.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@strapi/blocks-react-renderer": "^1.0.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@uppy/compressor": "^2.1.0",
