Add strapi import

--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -10,13 +10,11 @@ Icon
 .Trashes
 ._*
 
-
 ############################
 # Linux
 ############################
 
 *~
-
 
 ############################
 # Windows
@@ -31,7 +29,6 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
-
 ############################
 # Packages
 ############################
@@ -41,6 +38,7 @@ $RECYCLE.BIN/
 *.dat
 *.dmg
 *.gz
+!export.tar.gz
 *.iso
 *.jar
 *.rar
@@ -60,7 +58,6 @@ $RECYCLE.BIN/
 *.out
 *.pid
 
-
 ############################
 # Logs and databases
 ############################
@@ -70,7 +67,6 @@ $RECYCLE.BIN/
 *dump.sql
 *.sqlite
 *.sqlite3
-
 
 ############################
 # Misc.
