--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "contentmanager",
     "Kunsthalte",
     "kunsthaltecoordinator",
+    "minimier",
     "platformcoordinator",
     "strapi"
   ],
