Fix export filename

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,8 +12,8 @@
     "transfer": "strapi transfer --from https://api.freedomcombination.com/admin",
     "trend-rights": "strapi dev",
     "lint": "eslint .",
-    "export": "strapi export --no-encrypt --exclude files --file dump",
-    "import": "strapi import --exclude files --file dump.tar.gz",
+    "export": "strapi export --no-encrypt --exclude files --file export",
+    "import": "strapi import --exclude files --file export.tar.gz",
     "start": "strapi start",
     "build": "strapi build",
     "build:dev": "strapi build",
