--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,7 +33,7 @@ jobs:
           TEST_USERNAME: ${{ vars.USERNAME }}
           TEST_PASSWORD: ${{ vars.PASSWORD }}
           TEST_API_TOKEN: ${{ secrets.API_TOKEN }}
-        run: npx playwright test
+        run: npx playwright test --grep-invert "@onboarding|@api"
       - uses: actions/upload-artifact@v4
         if: always()
         with:
