added preferences tab to profile page. added mail language selector. added locales.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "email": "npx email dev",
+    "api": "strapi dev",
     "dev": "strapi dev",
     "dashboard": "strapi dev",
     "foundation": "strapi dev",
