--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "turbo run build --filter=!api",
     "build:dev": "turbo run build:dev",
+    "api": "turbo run api --concurrency=20",
     "dev": "dotenv -- turbo run dev --concurrency=20",
     "dev:test": "yarn kill-ports && dotenv -- turbo run dev:test --concurrency=20",
     "dashboard": "turbo run dashboard --concurrency=20",
